# nebula-partner-backend

./: .env.template  .flake8  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  estructura.md  generate_structure.py  logging.ini  manage.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
backend/: manage.py
backend/partner_backend/: urls.py
backend/users/: serializers.py
documentacion/: historias_usuario.md
partner_backend/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py  0002_post_chosen_seller_post_is_sold_and_more.py
src/: config.py  database.py  exceptions.py  main.py  pagination.py
src/auth/: jwt_handler.py  permissions.py  routes.py
src/middleware/: cors.py
src/supplier/: models.py  repository.py  routes.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_employee_company.py  0003_employee_employee_type.py
